pxc/tests/test_019_thread/thrtest2.px
public namespace thrtest2;
import common -;
import thread -;

function void hoge(int x) {
  println(x);
}

multithreaded struct my_thread_obj(int x0, int y0,
  io::io const& sys0) {
  int x = x0;
  int y = y0;
  io::io sys = sys0;
  public function void main() {
    const stdout = sys.stdout();
    stdout.println("my thread main");
    stdout.println(x);
    hoge(y); // error: calling global function
    // io.stdout_println(hoge); // error
    // io::main.stdout_println(y); // error
  }
}

function void test1()
{
  thread thr = make_thread(my_thread_obj(123, 456, io::system));
  thr.join();
}

test1();
